# crglLib

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml  cmake.yml
include/: creglContext.hpp  crglContext.hpp  crglCore.hpp  crglEnumerators.hpp  crglFormat.hpp  crglTexture.hpp  crglVertexArray.hpp
lib/: CMakeLists.txt
lib/include/: crglContext.hpp  crglCore.hpp  crglFormat.hpp  crglFrameBuffer.hpp  crglImage.hpp  crglImageHandler.hpp
lib/source/: crglContext.cpp  crglCore.cpp  crglFormat.cpp  crglFrameBuffer.cpp  crglImage.cpp  crglImageHandler.cpp  crglPrecompiled.hpp  crglShaders.cpp  crglVertexArray.cpp
shaders/: test_shader.frag  test_shader.vert
source/: creglContext.cpp  crglContext.cpp  crglCore.cpp  crglImage.cpp  crglPrecompiled.hpp  crglTexture.cpp  crglVertexArray.cpp
test/: CMakeLists.txt  crglTest.cpp  crglTest.hpp
